--- a/application/modules/default/views/scripts/donate/index.phtml
+++ b/application/modules/default/views/scripts/donate/index.phtml
@@ -51,6 +51,12 @@ form .SelectionGroup li label {
     padding-top: 15px;
     padding-bottom: 20px;
 }
+
+.btn {
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+}
     
 </style>
 <main id="explore-content">
@@ -112,7 +118,7 @@ form .SelectionGroup li label {
                             </ul>
                         </fieldset>
                         <div class="Actions">
-                            <input type="submit" name="action_paypal" value="Donate with PayPal" class="action" id="action_paypal">
+                            <input class="btn btn-primary active" type="submit" name="action_paypal" value="Donate with PayPal" id="action_paypal">
                         </div>
                     </form>
                 </div>
