--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -92,6 +92,11 @@ $time_start = microtime(true);
                       <div class="downloadDiv" >
                           <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
                       </div>
+              
+                      <div class="donateDiv" >
+                          <a href="/donate" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Donate</a>
+                      </div>
+              
 
                       <div  class="row sidebar-right-info" >                                
                           <span class="newsTitle"> News </span>
