--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -53,6 +53,14 @@
 			width: 92%;
 		}
 	}
+        .donateDiv{
+		width: 92%;
+                padding-bottom: 10px; 
+		text-align: center;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+	}
 	.sidebar-right-info{
 		background-color: #f1f1f1; 
 		margin-left: 0px; 
