--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -93,6 +93,12 @@
             </div>
         </div>
         <div class="jtable-input-field-container">
+            <div class="jtable-input-label">Show Description</div>
+            <div class="jtable-input jtable-text-input">
+                <input class="" id="show_description" name="show_description" type="text">
+            </div>
+        </div>
+        <div class="jtable-input-field-container">
             <div class="jtable-input-label">Status</div>
             <div class="jtable-input jtable-dropdown-input">
                 <select id="subcat-status" name="is_active" class="validate[required]">
@@ -403,6 +409,14 @@
                 dl_pling_factor: {
                     title: 'Pling Factor',
                     type: 'input',
+                    create: true,
+                    edit: true,
+                    width: '30%'
+                },
+                show_description: {
+                    title: 'Show Description',
+                    options: {'1': 'Show', '0': 'Do not show'},
+                    defaultValue: '0',
                     create: true,
                     edit: true,
                     width: '30%'
