--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -94,8 +94,11 @@
         </div>
         <div class="jtable-input-field-container">
             <div class="jtable-input-label">Show Description</div>
-            <div class="jtable-input jtable-text-input">
-                <input class="" id="show_description" name="show_description" type="text">
+            <div class="jtable-input jtable-dropdown-input">
+                <select id="show_description" name="show_description" class="validate[required]">
+                    <option value="1">Show</option>
+                    <option selected="selected" value="0">Don't show</option>
+                </select>
             </div>
         </div>
         <div class="jtable-input-field-container">
@@ -411,7 +414,7 @@
                     type: 'input',
                     create: true,
                     edit: true,
-                    width: '30%'
+                    width: '5%'
                 },
                 show_description: {
                     title: 'Show Description',
@@ -419,7 +422,8 @@
                     defaultValue: '0',
                     create: true,
                     edit: true,
-                    width: '30%'
+                    list: true,
+                    width: '5%'
                 },
                 is_active: {
                     title: 'Status',
