--- a/application/modules/default/views/scripts/donate/index.phtml
+++ b/application/modules/default/views/scripts/donate/index.phtml
@@ -66,9 +66,9 @@ form .SelectionGroup li label {
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2>Please help us</h2>
-                    <p>Since May 2017 we support the creatives on our platform. That's why we have introduced <a href="/plings">pling</a>. The number of dowloads multiplied by the pling factor gives the amount which is paid out monthly via PayPal to our contributers.
+                    <p>Since May 2017 we support the creatives on our platform. That's why we have introduced <a href="/plings">pling</a>.
                     </p>
-                    <p>Please help us with a donation.</p>
+                    <p>Please help us to support the creators and keep the platform growing.</p>
                     
                     
                     <form id="Form_DonationProceed" action="/donate/pay" method="post" enctype="application/x-www-form-urlencoded">
@@ -82,17 +82,20 @@ form .SelectionGroup li label {
                                         <div id="Amount" class="field optionset nolabel">
                                             <div class="middleColumn">
                                                 <ul id="Form_DonationProceed_Amount" class="optionset nolabel">
-                                                    <li class="odd val05">
-                                                        <input id="amount_05" class="radio" name="amount_predefined" type="radio" value="5"><label for="Form_DonationProceed_Amount_05">$5</label>
+                                                    <li>
+                                                            <input id="amount_15" class="radio" name="amount_predefined" type="radio" value="15"><label for="Form_DonationProceed_Amount_10">$15</label>
                                                     </li>
-                                                    <li class="even val10">
-                                                            <input id="amount_10" class="radio" name="amount_predefined" type="radio" value="10" checked=""><label for="Form_DonationProceed_Amount_10">$10</label>
+                                                	<li>
+                                                            <input id="amount_25" class="radio" name="amount_predefined" type="radio" value="25" checked=""><label for="Form_DonationProceed_Amount_10">$25</label>
                                                     </li>
-                                                    <li class="odd val20">
-                                                            <input id="amount_20" class="radio" name="amount_predefined" type="radio" value="20"><label for="Form_DonationProceed_Amount_20">$20</label>
+                                                    <li>
+                                                            <input id="amount_50" class="radio" name="amount_predefined" type="radio" value="50"><label for="Form_DonationProceed_Amount_20">$50</label>
                                                     </li>
-                                                    <li class="even val50">
-                                                            <input id="amount_50" class="radio" name="amount_predefined" type="radio" value="50"><label for="Form_DonationProceed_Amount_50">$50</label>
+                                                    <li>
+                                                            <input id="amount_75" class="radio" name="amount_predefined" type="radio" value="75"><label for="Form_DonationProceed_Amount_20">$75</label>
+                                                    </li>
+                                                    <li>
+                                                            <input id="amount_100" class="radio" name="amount_predefined" type="radio" value="100"><label for="Form_DonationProceed_Amount_50">$100</label>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -100,7 +103,7 @@ form .SelectionGroup li label {
                                     </div>
                                 </li>
                                 <li>
-                                    <input class="selector" type="radio" id="amount_custom_2" name="toggle_custom" value="custom"><label for="Form_DonationProceed_toggle_custom_2">Or enter an amount</label>
+                                    <input class="selector" type="radio" id="amount_custom_2" name="toggle_custom" value="custom"><label for="Form_DonationProceed_toggle_custom_2">Or enter an free amount > $100</label>
                                     <div class="CompositeField selectiongroup_item ">
                                         <div class="field fieldgroup nolabel">
                                             <div class="middleColumn fieldgroup">
