--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -94,7 +94,7 @@ $time_start = microtime(true);
                       </div>
               
                       <div class="donateDiv" >
-                          <a href="/donate" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Donate</a>
+                          <a href="/donate" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
                       </div>
               
 
