--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1022,6 +1022,18 @@ span.packagetypeos
     border-radius: 0;
     width: inherit;
 }
+
+.comments-list .creator-badge{
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  background: orange;
+  text-align: center;
+  border-radius: 30px 30px 30px 30px;
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 11px;
+}
 .glyphicon.spinning {
     animation: spin 1s infinite linear;
     -webkit-animation: spin2 1s infinite linear;
