show description in backend

--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -418,11 +418,11 @@
                 },
                 show_description: {
                     title: 'Show Description',
-                    options: {'1': 'Show', '0': 'Do not show'},
+                    //options: {'1': 'Show', '0': 'Do not show'},
+                    type: 'input',
                     defaultValue: '0',
                     create: true,
                     edit: true,
-                    list: true,
                     width: '5%'
                 },
                 is_active: {
