--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -428,7 +428,17 @@ ul.meta-nav-top
               height: 30px;
               width: 30px;
               margin-top: -15px;
-          
+              .supporter-badge{
+                  position: absolute;
+                  right: 0px;
+                  bottom: 0px;
+                  background: blue;
+                  text-align: center;
+                  border-radius: 30px 30px 30px 30px;
+                  color: #fff;
+                  padding: 5px 10px;
+                  font-size: 12px;
+              }
               img {
                 height: 30px;
                 width: 30px;
@@ -1814,6 +1824,17 @@ span.page-views {
 
         .product-maker-thumbnail {
           float: right;
+          .supporter-badge{
+              position: absolute;
+              right: 0px;
+              bottom: 0px;
+              background: blue;
+              text-align: center;
+             border-radius: 15px 15px 15px 15px;
+             color: #fff;
+             padding: 2px 5px;
+             font-size: 10px;
+          }
         }
 
         .product-maker-summary {
@@ -5356,10 +5377,12 @@ img.imgpopover
 
 /** plings **/
 
-main#plings-page{
+main#plings-page{  
   .wrapper{
        width:450px;        
        padding:20px;
+       max-height: 700px;
+       overflow: auto;
        .title{
           background-color:#ccc; 
           height: 30px;
