show desc in backend

--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -417,12 +417,9 @@
                     width: '5%'
                 },
                 show_description: {
-                    title: 'Show Description',
-                    //options: {'1': 'Show', '0': 'Do not show'},
-                    type: 'input',
+                	title: 'Show Description',
+                    options: {'1': 'Show', '0': 'Do not show'},
                     defaultValue: '0',
-                    create: true,
-                    edit: true,
                     width: '5%'
                 },
                 is_active: {
